--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using DocWellV2
 @using DocWellV2.Components
+@using DocWellV2.Data
+@using DocWellV2.Data.Models
+@using DocWellV2.Services
+@using DocWellV2.Utils
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
